# llm-knowledge-agent

./: .gitignore  LICENSE  README.md  demo_file.py  example.env  llm_knowledge_agent.py  main.py  pyproject.toml
llm_knowledge_agent/: __init__.py  agent.py  agent_runner.py  enriched_text.py  note.py  obsidian_lit_note.py  obsidian_templates.py
llm_knowledge_agent/agent/: agent.py
tests/: test_llm_knowledge_agent.py
