[tool.poetry]
name = "llm-knowledge-agent"
version = "0.1.0"
description = ""
authors = ["kylestratis <kyle.stratis@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
python-dotenv = "^1.0.0"
pinecone-client = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
