[tool.poetry]
name = "llm-knowledge-agent"
version = "0.1.0"
description = ""
authors = ["kylestratis <kyle.stratis@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
python-dotenv = "^1.0.0"
cohere = "^4.3.1"
pathvalidate = "^2.5.2"
chromadb = "^0.3.22"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_note = "main:make_note"
load_kb = "main:load_knowledgebase"
delete_kb = "main:delete_knowledgebase"